sort.pancake.BasicPancake.scala.error
Erreur de compilation :
BasicPancake:7: error: unclosed character literal
    print('   ')
          ^BasicPancake:7: error: unclosed character literal
    print('   ')
              ^BasicPancake:7: error: illegal start of simple expression
    print('   ')
          ^BasicPancake:16: error: ')' expected but '}' found.
  }
  ^